# hello-world-service-py

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  whitelist.txt
.github/workflows/: main-branch.yaml  main-build-and-publish.yml  other-branch.yaml  other-check-quality-and-tests.yml  release.yaml
.meta/coverage/: report.txt
dev/: config.yaml
hello_world_api_py/: main.py
hello_world_api_py/app/: config.py  container.py
hello_world_api_py/app/containers/: __init__.py  root_container.py
hello_world_api_py/app/entry_points/: api.py
hello_world_api_py_test/: import_test.py  main_test.py
hello_world_api_py_test/app/: config_test.py
hello_world_api_test/: import_test.py
hello_world_service/: main.py
hello_world_service/app/: application.py  config.py
hello_world_service/app/entry_points/: api.py  api_entry_point.py
hello_world_service_test/: import_test.py
hello_world_service_test/app/: application_test.py  config_test.py  main_test.py
hello_world_service_test/app/entry_points/: api_entry_point_test.py
hello_world_service_test/test_helpers/: __init__.py  factories.py  fixtures.py
hello_world_service_test/test_helpers/fixtures/: __init__.py
