[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=69",
  "setuptools-scm>=8.0.4",

]

[project]
authors = [{name = "Danny Guinther"}]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.9",
]
dependencies = [
  "service-oriented==0.0.2a28",
]
description = "Simple API server written in python"
dynamic = ["version"]
license = {text = "MIT"}
name = "hello-world-api-py"
readme = "README.md"
requires-python = ">3.9.0"

[project.optional-dependencies]
dev = [
  "black~=24.2.0",
  "dlint~=0.14.1",
  "flake8-comprehensions~=3.14.0",
  "flake8-eradicate~=1.5.0",
  "flake8-pyproject~=1.2.3",
  "flake8-spellcheck~=0.28.0",
  "flake8-typing-imports~=1.15.0",
  "flake8~=7.0.0",
  "isort~=5.13.2",
  "mypy~=1.8.0",
  "pep8-naming~=0.13.3",
  "pre-commit~=3.6.0",
  "pytest-watcher~=0.4.2",
  "pytest~=7.4.0",
  "safety==2.3.4",
]
all = ["hello-world-api-py[dev]"]

[project.urls]
Homepage = "https://github.com/tdg5/hello-world-api-py"
Source = "https://github.com/tdg5/hello-world-api-py"
Tracker = "https://github.com/tdg5/hello-world-api-py/issues"

[tool.black]
include = "hello_world_api_py(_test)?/.*\\.py$"
line-length = 88
target-version = ["py39"]

[tool.flake8]
ignore = ["E203", "E251", "E701", "N805", "W503", "DAR101", "DAR201", "DAR301", "DAR401"]
max-line-length = 88
min_python_version = 3.9

[tool.isort]
include_trailing_comma = true
known_first_party = ["hello_world_api_py", "hello_world_api_py_test"]
line_length = 88
lines_after_imports = 2
multi_line_output = 3
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
use_parentheses = true

[tool.mypy]
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true

[tool.pytest.ini_options]
markers = ["integration_test: marks tests as integration tests (deselect with '-m \"not integration_test\"')"]

[tool.setuptools.packages.find]
include = [
  "hello_world_api_py",
]
where = ["."]

[tool.setuptools_scm]
version_file = "hello_world_api_py/__version__.py"
